게시판 crud 완성

--- a/_musinsa_teamProject/bin/main/static/index.html
+++ b/_musinsa_teamProject/bin/main/static/index.html
@@ -5,8 +5,9 @@
 <title>Insert title here</title>
 </head>
 <body>
-<div th:each="aa : ${list}">
-<p th:text="${aa.test}">
-</div>
+<h1>index</h1>
+<form action="/fashionBoard">
+<input type="submit" value="패션게시글">
+</form>
 </body>
 </html>
